frontend/src/app/app.component.scss
.p-menubar {
  padding: .5rem 1rem;
  position: sticky;
  top: 0;
  z-index: 1;

  & button.t-menu-button:not(:first-child) {
    margin-left: 6px;
  }

  & .t-filter-input:not(:first-child) {
    margin-left: 6px;
  }

  t-torrent-search {
    margin: 0 12px;
    flex-grow: 1;
  }
}

.layout-content {
  padding: 2rem;
  background-color: var(--surface-b);
}

::ng-deep .t-button-overlay {
  & button.p-button:not(:first-child) {
    margin-left: 12px;
  }
}

::ng-deep .t-filter-overlay {
  min-width: 160px;

  & .t-sort-option {
    margin-bottom: 12px;
  }

  & > * {
    width: 100%;

    & .p-dropdown {
      width: 100%;
    }
  }
}


@media only screen and (max-width: 750px) {
  .p-menubar {
    padding: .5rem;

    & p-dropdown:not(:first-child) {
      margin-left: 6px;
    }
  }

  .layout-content {
    padding: 1rem;
  }
}

.t-empty {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  color: #434f5f;

  & i {
    font-size: 10rem;
    opacity: .2;
  }

  & span {
    margin-top: 2rem;
    font-weight: 600;
  }
}


t-breakpoint-overlay {
  display: flex;
  align-items: center;
}

.t-sort-option {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;


  ::ng-deep & p-dropdown {
    flex-grow: 1;
    & .p-dropdown {
      border-radius: 4px 0 0 4px;
    }
  }

  & .t-sort-button {
    background: #20262e;
    border: 1px solid #3f4b5b;
    border-radius: 0 4px 4px 0;
    border-left: none;
    width: 3rem;
    color: rgba(255, 255, 255, 0.6);
  }
}

.t-bottom-bar {
  position: fixed;
  bottom: 0;
  width: 100%;
}

